add the mathmatical function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="converter-container">
         <p id="alert">either 0 or 1!</p>
         <div class=center>
-            <input type="text" id="inputField" placeholder="Input either 0 or 1">
+            <input type="text" id="inputField" placeholder="Input either 0 or 1" maxlength="8">
             <button id="convert-btn">Convert</button>
             <input id="outputField" disabled/>
         </div>
